<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b2ebf2">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro1"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <EditText
                android:id="@+id/text2"
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="100dp"
                android:inputType="text"
                android:textStyle="italic"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="100dp"
                android:inputType="text"
                android:textStyle="italic"/>
        </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="100dp"
                android:inputType="number"
                android:textStyle="italic"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/boton1"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:onClick="test"
                android:text="@string/boton1" />
        </TableRow>

    </TableLayout>
</LinearLayout>